--- a/i18n/account_extra_report_partnerledger.pot
+++ b/i18n/account_extra_report_partnerledger.pot
@@ -4,7 +4,7 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: Odoo Server 9.0e\n"
+"Project-Id-Version: Odoo Server 9.0c\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2016-05-24 12:52+0000\n"
 "PO-Revision-Date: 2016-05-24 12:52+0000\n"
