--- a/i18n/fr.po
+++ b/i18n/fr.po
@@ -6,8 +6,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Odoo Server 9.0e\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2016-06-13 09:22+0000\n"
-"PO-Revision-Date: 2016-06-13 09:22+0000\n"
+"POT-Creation-Date: 2017-02-23 10:22+0000\n"
+"PO-Revision-Date: 2017-02-23 10:22+0000\n"
 "Last-Translator: <>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
@@ -89,6 +89,11 @@ msgstr "Devise"
 #: model:ir.ui.view,arch_db:account_extra_report_partnerledger.account_extra_report_partnerledger
 msgid "Date"
 msgstr "Date"
+
+#. module: account_extra_report_partnerledger
+#: model:ir.ui.view,arch_db:account_extra_report_partnerledger.account_extra_report_partnerledger
+msgid "Date Due"
+msgstr "Date d'échéance"
 
 #. module: account_extra_report_partnerledger
 #: model:ir.ui.view,arch_db:account_extra_report_partnerledger.account_extra_report_partnerledger
